--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
                 </property>
             </activation>
             <build>
-                <plugins>git 
+                <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jarsigner-plugin</artifactId>
