--- a/pom.xml
+++ b/pom.xml
@@ -10,33 +10,16 @@
     <name>Chat</name>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>com.schibsted.android</groupId>
             <artifactId>spid</artifactId>
             <version>1.1.3</version>
-        </dependency>
+        </dependency>-->
         <dependency>
-            <groupId>android</groupId>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
-            <version>4.1.2_r4</version>
+            <version>4.1.1.4</version>
             <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>android.support</groupId>
-            <artifactId>compatibility-v4</artifactId>
-            <version>19.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>android.support</groupId>
-            <artifactId>compatibility-v7-appcompat</artifactId>
-            <version>19.0.1</version>
-            <type>apklib</type>
-        </dependency>
-        <dependency>
-            <groupId>android.support</groupId>
-            <artifactId>compatibility-v7-appcompat</artifactId>
-            <version>19.0.1</version>
-            <type>jar</type>
         </dependency>
         <!--<dependency>
             <groupId>com.google.http-client</groupId>
@@ -82,7 +65,6 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
-                    <version>3.6.1</version>
                     <extensions>true</extensions>
                 </plugin>
             </plugins>
@@ -165,18 +147,7 @@
                                 </goals>
                                 <phase>package</phase>
                                 <inherited>true</inherited>
-                                <configuration>
-                                    <removeExistingSignatures>true</removeExistingSignatures>
-                                    <archiveDirectory/>
-                                    <includes>
-                                        <include>${project.build.directory}/${project.artifactId}.apk</include>
-                                    </includes>
-                                    <keystore>${sign.keystore}</keystore>
-                                    <alias>${sign.alias}</alias>
-                                    <storepass>${sign.storepass}</storepass>
-                                    <keypass>${sign.keypass}</keypass>
-                                    <verbose>true</verbose>
-                                </configuration>
+
                             </execution>
                         </executions>
                     </plugin>
