--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,20 @@
             <version>1.1.3</version>
         </dependency>
         <dependency>
-            <groupId>android</groupId>
+            <groupId>com.google.android</groupId>
             <artifactId>android</artifactId>
-            <version>4.1.2_r4</version>
+            <version>4.1.1.4</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
+
+
+        <!--<dependency>-->
+            <!--<groupId>android</groupId>-->
+            <!--<artifactId>android</artifactId>-->
+            <!--<version>4.1.2_r4</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>
             <groupId>android.support</groupId>
             <artifactId>compatibility-v4</artifactId>
             <version>19.0.1</version>
@@ -37,7 +45,7 @@
             <artifactId>compatibility-v7-appcompat</artifactId>
             <version>19.0.1</version>
             <type>jar</type>
-        </dependency>
+        </dependency>-->
         <!--<dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-gson</artifactId>
