--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
             <version>1.1.3</version>
         </dependency>
         <dependency>
-            <groupId>com.google.android</groupId>
+            <groupId>android</groupId>
             <artifactId>android</artifactId>
-            <version>4.1.1.4</version>
+            <version>4.3_r2</version>
             <scope>provided</scope>
         </dependency>
 
