asmack library added and ArticleChatActivtity implemented

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="0.0.1" package="pl.schibsted.chat">
     <uses-sdk android:minSdkVersion="16"/>
-    <application android:debuggable="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name="MainActivity">
+    <application
+            android:debuggable="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name">
+        <activity android:label="@string/app_name" android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:label="@string/app_name" android:name=".activities.ArticleChatActivity"/>
+
     </application>
 </manifest>
