--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
             <version>4.3_r2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>otto</artifactId>
+            <version>1.3.5</version>
+        </dependency>
         <!--<dependency>
             <groupId>android.support</groupId>
             <artifactId>compatibility-v4</artifactId>
