--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,16 +15,37 @@
             android:debuggable="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/ChatTheme">
+            android:theme="@style/ChatTheme"
+            android:name=".App">
 
         <activity
                 android:label="@string/app_name"
-                android:name=".activities.MainActivity">
+                android:name=".activities.MainActivity"
+                android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+                android:name=".activities.LoginActivity"
+                android:screenOrientation="portrait"
+                android:windowSoftInputMode="adjustResize">
+
+            <meta-data
+                    android:name="android.support.PARENT_ACTIVITY"
+                    android:value=".activities.MainActivity"/>
+        </activity>
+
+        <service
+                android:name=".service.SPiDAuthenticationService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator"/>
+            </intent-filter>
+
+            <meta-data android:name="android.accounts.AccountAuthenticator" android:resource="@xml/authenticator"/>
+        </service>
     </application>
 </manifest>
