--- a/pom.xml
+++ b/pom.xml
@@ -28,20 +28,20 @@
             <version>4.3_r2</version>
             <scope>provided</scope>
         </dependency>
-<<<<<<< HEAD
 
-=======
         <dependency>
             <groupId>com.squareup</groupId>
             <artifactId>otto</artifactId>
             <version>1.3.5</version>
         </dependency>
-        <!--<dependency>
-            <groupId>android.support</groupId>
-            <artifactId>compatibility-v4</artifactId>
-            <version>19.0.1</version>
+
+        <dependency>
+            <groupId>jivesoftware</groupId>
+            <artifactId>smack</artifactId>
+            <version>3.0.4</version>
         </dependency>
->>>>>>> 919820602def9bd37c1f90627185a8d70244e195
+
+
         <dependency>
             <groupId>com.google.http-client</groupId>
             <artifactId>google-http-client-gson</artifactId>
@@ -78,6 +78,7 @@
             <version>${robospice-retrofit.version}</version>
         </dependency>
     </dependencies>
+
     <build>
         <!--finalName>${project.artifactId}</finalName-->
         <sourceDirectory>src</sourceDirectory>
@@ -86,6 +87,7 @@
                 <plugin>
                     <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                     <artifactId>android-maven-plugin</artifactId>
+                    <version>3.6.1</version>
                     <extensions>true</extensions>
                 </plugin>
             </plugins>
@@ -168,7 +170,18 @@
                                 </goals>
                                 <phase>package</phase>
                                 <inherited>true</inherited>
-
+                                <!--<configuration>
+                                    <removeExistingSignatures>true</removeExistingSignatures>
+                                    <archiveDirectory/>
+                                    <includes>
+                                        <include>${project.build.directory}/${project.artifactId}.apk</include>
+                                    </includes>
+                                    <keystore>${sign.keystore}</keystore>
+                                    <alias>${sign.alias}</alias>
+                                    <storepass>${sign.storepass}</storepass>
+                                    <keypass>${sign.keypass}</keypass>
+                                    <verbose>true</verbose>
+                                </configuration>-->
                             </execution>
                         </executions>
                     </plugin>
@@ -213,7 +226,7 @@
                             </execution>
                         </executions>
                     </plugin>
-                    <!--<plugin>
+                    <plugin>
                         <groupId>org.codehaus.mojo</groupId>
                         <artifactId>build-helper-maven-plugin</artifactId>
                         <configuration>
@@ -239,7 +252,7 @@
                                 </goals>
                             </execution>
                         </executions>
-                    </plugin>-->
+                    </plugin>
                 </plugins>
             </build>
         </profile>
